[package]
name = "nickel-lang-utilities"
version = "1.0.0"
authors = ["The Nickel Team <nickel-lang@protonmail.com>"]
description = "Common helper functions for the tests and benchmarks of the nickel-lang crate."
edition = "2018"

[lib]
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel-lang = {path = "../", version = "1.0.0"}
criterion = "0.3"
codespan = "0.11"
serde = { version = "1.0.154", features = ["derive"] }
toml = { version = "0.7.2", features = ["parse"] }
