[package]
name = "nickel-lang-utilities"
description = "Common helper functions for the tests and benchmarks of the nickel-lang crate."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[lib]
bench = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nickel-lang = {path = "../nickel-lang", version = "1.0.0"}
criterion = "0.3"
codespan = "0.11"
serde = { version = "1.0.154", features = ["derive"] }
toml = { version = "0.7.2", features = ["parse"] }
