[package]
name = "nickel-lang-vector"
version = "0.1.0"
description = "Persistent vectors for Nickel"
edition = "2021"

[dependencies]
imbl-sized-chunks = "0.1.2"
serde.workspace = true

[dev-dependencies]
arbitrary = { version = "1.3.2", features = ["derive"] }
arbtest = "0.3.1"
criterion = "0.5.1"
rpds = "1.1.0"

[[bench]]
name = "rpds_comparison"
harness = false

[[bench]]
name = "slice"
harness = false
