[package]
name = "nickel-wasm-repl"
version = "0.6.0"
description = "WebAssembly REPL for the Nickel programming language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nickel-lang-core = { workspace = true, default-features = false, features = ["repl-wasm"] }

[lib]
crate-type = ["cdylib", "rlib"]
