[package]
name = "lsp-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
env_logger.workspace = true
log.workspace = true
lsp-types.workspace = true
lsp-server.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml.workspace = true
assert_cmd.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
insta.workspace = true
test-generator.workspace = true
nickel-lang-utils.workspace = true
