[package]
name = "nickel-lang-lsp"
readme = "README.md"
description = "NLS: A language server for the Nickel configuration language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nls"
path = "src/main.rs"

[features]
default = ["format"]
format = ["nickel-lang-core/format"]

[[bench]]
name = "main"
harness = false

[build-dependencies]
lalrpop.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive"] }
codespan-reporting.workspace = true
codespan.workspace = true
crossbeam.workspace = true
csv.workspace = true
derive_more.workspace = true
env_logger.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
nickel-lang-core.workspace = true
regex.workspace = true
scopeguard.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_matches.workspace = true
criterion.workspace = true
glob = "0.3.1"
insta.workspace = true
lsp-harness.workspace = true
nickel-lang-utils.workspace = true
pretty_assertions.workspace = true
test-generator.workspace = true
