[package]
name = "nickel-lang-lsp"
readme = "README.md"
description = "NLS: A language server for the Nickel configuration language."
authors.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nls"
path = "src/main.rs"

[[bench]]
name = "main"
harness = false

[build-dependencies]
lalrpop.workspace = true

[dependencies]
anyhow.workspace = true
bincode.workspace = true
clap = { workspace = true, features = ["derive", "string"] }
codespan-reporting.workspace = true
codespan.workspace = true
crossbeam.workspace = true
csv.workspace = true
derive_more.workspace = true
env_logger.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
# We enable the `spanned-deser` feature, anticipating the fact that NLS can be
# used to open standard JSON or YAML files with a convention to know which
# contract they should follow, e.g. with an environment variable or just the
# filesystem layout, in which case we will be able to show Nickel diagnostics
# directly inside a TOML or a YAML file. It's not used as of yet, though.
nickel-lang-core = {workspace = true, default-features = false, features = ["spanned-deser", "format"]}
regex.workspace = true
scopeguard.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
git-version.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_matches.workspace = true
criterion.workspace = true
glob = "0.3.1"
insta = { workspace = true, features = ["filters"] }
lsp-harness.workspace = true
nickel-lang-utils.workspace = true
pretty_assertions.workspace = true
test-generator.workspace = true
