[package]
name = "nickel-lang-lsp"
readme = "README.md"
description = "NLS: A language server for the Nickel configuration language."
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true

[[bin]]
name = "nls"
path = "src/main.rs"
bench = false

[[bench]]
name = "main"
harness = false

[build-dependencies]
lalrpop.workspace = true

[dependencies]
anyhow.workspace = true
assert_matches.workspace = true
bincode = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive", "string"] }
codespan-reporting.workspace = true
codespan.workspace = true
crossbeam.workspace = true
csv.workspace = true
env_logger.workspace = true
git-version.workspace = true
glob.workspace = true
lalrpop-util.workspace = true
lazy_static.workspace = true
log.workspace = true
lsp-server.workspace = true
lsp-types.workspace = true
nickel-lang-core = {workspace = true, default-features = false, features = ["format"]}
notify.workspace = true
notify-debouncer-full.workspace = true
ouroboros.workspace = true
pretty.workspace = true
regex.workspace = true
scopeguard.workspace = true
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
criterion.workspace = true
glob.workspace = true
insta = { workspace = true, features = ["filters"] }
lsp-harness.workspace = true
nickel-lang-utils.workspace = true
pretty_assertions.workspace = true
tempfile.workspace = true
test-generator.workspace = true

[features]
nix-experimental = ["nickel-lang-core/nix-experimental"]

[package.metadata.binstall]
pkg-url = "{repo}/releases/download/{version}/nls-{target-arch}-{target-family}{binary-ext}"
pkg-fmt = "bin"
# https://github.com/cargo-bins/cargo-binstall/issues/2328 macos
# https://github.com/cargo-bins/cargo-binstall/issues/2126 arm64 vs aarch64
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{repo}/releases/download/{version}/nls-arm64-macos"
[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{repo}/releases/download/{version}/nls-arm64-linux"
